プロフィールボタン作成

--- a/app/assets/stylesheets/index2.css
+++ b/app/assets/stylesheets/index2.css
@@ -6,3 +6,146 @@
 	box-sizing: border-box;
   font-family: 'Quicksand', sans-serif;
 }
+
+.profile-btn {
+  height: 500px;
+  width: 500px;
+  display: flex;
+}
+/* ボタン（デザインはお好みで） */
+
+
+/* チェックボックスを非表示 */
+#my_modal1{
+  display: none;
+}
+/* モーダル */
+.my_modal_body1{    
+  display: none;
+  position: fixed;
+  z-index: 100000;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  -webkit-transform: translateY(-50%) translateX(-50%);
+  display: none;
+  background-color: #FFF;
+  overflow-y: auto;
+  width: 90%;
+  max-height: 80%;
+  max-width: 600px;
+}
+
+/* モーダル内ヘッダー */
+.my_modal_header{
+  padding: 15px 10px;
+  background-color: #23282D;
+  color: #FFF;
+  font-weight: bold;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  text-align: center;
+}
+
+/* クローズアイコン */
+.my_modal_close{
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  cursor: pointer;
+}
+.my_modal_close_icon{
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  position: relative;
+  cursor: pointer;
+}
+.my_modal_close_icon span::before,
+.my_modal_close_icon span::after{
+  display: block;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 84%;
+  height: 16%;
+  margin: -8% 0 0 -42%;
+  background: #FFF;
+}
+.my_modal_close_icon span::before{
+  transform: rotate(-45deg);
+}
+.my_modal_close_icon span::after{
+  transform: rotate(45deg);
+}
+
+/* コンテンツ表示 */
+.my_modal_content{
+  padding: 5px 10px;
+}
+
+/* 背景を暗くする */
+.my_modal_overlay{
+  display: none;
+  position: fixed;
+  z-index: 90000;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  background-color: #111;
+  opacity: 0.3;
+  cursor: pointer;
+}
+
+/* チェック時オーバーレイとコンテンツを表示 */
+#my_modal1:checked ~ .my_modal_body1, #my_modal1:checked ~ .my_modal_overlay{
+  display: block;
+}
+
+.neon {
+  position: absolute;
+  text-align: center;
+  font-size: 100px;
+  transform: translate(-50%,-50%);
+  color: #fff;
+  text-shadow: 0 0 20px #00FF00;
+  top: 100px;
+  left: 50vw;
+  border: 1px solid #fff;
+  padding-bottom: 15px;
+  cursor: pointer;
+  cursor: hand;
+}
+
+.neon::after {
+  content: attr(deta-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  color: #00FF00;
+  filter: blur(15px);
+}
+
+.neon::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #CCFF33;
+  z-index: -2;
+  opacity: .5;
+  filter: blur(40px);
+}
