--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -1,3 +1,23 @@
 <div class="back">
-
+  <div class="profile-btn">
+    <label for="my_modal1" class="neon" profile-text="profile">profile</label><!-- チェックボックスラベル -->
+    <input type="checkbox" id="my_modal1"><!-- 非表示チェックボックス -->
+    <label class="my_modal_overlay" for="my_modal1"></label><!-- オーバーレイ -->
+    <div class="my_modal_body1">
+      <div class="my_modal_header">
+          タイトル
+          <label class="my_modal_close" for="my_modal1"><div class="my_modal_close_icon"><span></span></div></label><!-- 閉じるボタン -->
+      </div>
+      <div class="my_modal_content">
+        <!-- モーダル内コンテンツ -->
+          <ul>
+              <li>コンテンツ1</li>
+              <li>コンテンツ2</li>
+              <li>コンテンツ3</li>
+         </ul>
+      </div>
+    </div>
+  </div>
+  
+  
 </div>
