--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -6,7 +6,6 @@
     <div class="my_modal_body1">
       <div class="my_modal_header">
           タイトル
-          <label class="my_modal_close" for="my_modal1"><div class="my_modal_close_icon"><span></span></div></label><!-- 閉じるボタン -->
       </div>
       <div class="my_modal_content">
         <!-- モーダル内コンテンツ -->
@@ -19,5 +18,43 @@
     </div>
   </div>
   
-  
+  <div class="portfolio-btn">
+    <label for="my_modal2" class="neon2" portfolio-text="portfolio">portfolio</label><!-- チェックボックスラベル -->
+    <input type="checkbox" id="my_modal2"><!-- 非表示チェックボックス -->
+    <label class="my_modal_overlay" for="my_modal2"></label><!-- オーバーレイ -->
+    <div class="my_modal_body2">
+      <div class="my_modal_header">
+          タイトル
+      </div>
+      <div class="my_modal_content2">
+        <!-- モーダル内コンテンツ -->
+          <ul>
+              <li>コンテ</li>
+              <li>コンテンツ2</li>
+              <li>コンテンツ3</li>
+         </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="skill-btn">
+    <label for="my_modal3" class="neon3" skill-text="skill">skill</label><!-- チェックボックスラベル -->
+    <input type="checkbox" id="my_modal3"><!-- 非表示チェックボックス -->
+    <label class="my_modal_overlay" for="my_modal3"></label><!-- オーバーレイ -->
+    <div class="my_modal_body3">
+      <div class="my_modal_header">
+          タイトル
+      </div>
+      <div class="my_modal_content3">
+        <!-- モーダル内コンテンツ -->
+          <ul>
+              <li>コンテ</li>
+              <li>コンテンツ2</li>
+              <li>コンテンツ3</li>
+         </ul>
+      </div>
+    </div>
+  </div>
+
+
 </div>
