--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -56,5 +56,24 @@
     </div>
   </div>
 
+  <div class="skill-btn">
+    <label for="my_modal4" class="neon4" Final-task-text="Final_task">Final_task</label><!-- チェックボックスラベル -->
+    <input type="checkbox" id="my_modal4"><!-- 非表示チェックボックス -->
+    <label class="my_modal_overlay" for="my_modal4"></label><!-- オーバーレイ -->
+    <div class="my_modal_body4">
+      <div class="my_modal_header">
+          タイトル
+      </div>
+      <div class="my_modal_content4">
+        <!-- モーダル内コンテンツ -->
+          <ul>
+              <li>コンテ</li>
+              <li>コンテンツ2</li>
+              <li>コンテンツ3</li>
+         </ul>
+      </div>
+    </div>
+  </div>
+
 
 </div>
