--- a/app/assets/stylesheets/Final-task.css
+++ b/app/assets/stylesheets/Final-task.css
@@ -1,23 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/earlyaccess/nicomoji.css");
 
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Nico Moji"; 
 }
 
 .portfolio-btn {
-  height: 500px;
-  width: 500px;
   display: flex;
 }
 
-#my_modal2{
+#my_modal4{
   display: none;
 }
 /* モーダル */
-.my_modal_body2{    
+.my_modal_body4{    
   display: none;
   position: fixed;
   z-index: 100000;
@@ -34,45 +32,44 @@
 }
 
 /* チェック時オーバーレイとコンテンツを表示 */
-#my_modal2:checked ~ .my_modal_body2, #my_modal2:checked ~ .my_modal_overlay{
+#my_modal4:checked ~ .my_modal_body4, #my_modal4:checked ~ .my_modal_overlay{
   display: block;
 }
 
-.neon2 {
+.neon4 {
   position: absolute;
   text-align: center;
   font-size: 100px;
   transform: translate(-50%,-50%);
   color: #fff;
-  text-shadow: 0 0 20px #00FFFF;
-  top: 300px;
+  text-shadow: 0 0 20px #5507FF;
+  top: 500px;
   left: 50vw;
   border: 1px solid #fff;
-  padding-bottom: 15px;
+  border-radius: 30px;
   cursor: pointer;
   cursor: hand;
-  border-radius: 30px;
   padding: 0 10px 16px 10px;
 }
 
-.neon2::after {
-  content: attr(portfolio-text);
+.neon4::after {
+  content: attr(Final-task-text);
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
-  color: #00FFFF;
+  color: #5507FF;
   filter: blur(15px);
 }
 
-.neon2::before {
+.neon4::before {
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: #99FFFF;
+  background: #C299FF;
   z-index: -2;
   opacity: .5;
   filter: blur(40px);
