--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -49,14 +49,14 @@
         <!-- モーダル内コンテンツ -->
           <ul>
               <li>コンテ</li>
-              <li>コンテンツ2</li>
+              <li>コンテ</li>
               <li>コンテンツ3</li>
          </ul>
       </div>
     </div>
   </div>
 
-  <div class="skill-btn">
+  <div class="Final-task-btn">
     <label for="my_modal4" class="neon4" Final-task-text="Final_task">Final_task</label><!-- チェックボックスラベル -->
     <input type="checkbox" id="my_modal4"><!-- 非表示チェックボックス -->
     <label class="my_modal_overlay" for="my_modal4"></label><!-- オーバーレイ -->
@@ -69,11 +69,19 @@
           <ul>
               <li>コンテ</li>
               <li>コンテンツ2</li>
-              <li>コンテンツ3</li>
+              <li>コン</li>
          </ul>
       </div>
     </div>
   </div>
+  
+  <div class="container1">
+    <div class= "light"></div>
+  </div>
 
+  <div class="container2">
+    <div class= "light"></div>
+  </div>
+  
 
 </div>
