--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -82,6 +82,8 @@
   <div class="container2">
     <div class= "light"></div>
   </div>
+
+  <p class="neon5" hello-text="click!">Hello</p>
   
 
 </div>
