--- a/app/assets/stylesheets/open.css
+++ b/app/assets/stylesheets/open.css
@@ -1,48 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-  font-family: 'Quicksand', sans-serif;
-}
-
-.neon5 {
+.neon6 {
   position: absolute;
   text-align: center;
   font-size: 100px;
   transform: translate(-50%,-50%);
   color: #fff;
-  text-shadow: 0 0 20px #0000BB;
+  text-shadow: 0 0 20px #FF0000;
   top: 300px;
-  left: 10vw;
+  left: 70vw;
   border: 1px solid #fff;
   border-radius: 30px;
   cursor: pointer;
   cursor: hand;
   padding: 0 10px 16px 10px;
-  transform: skewY(-10deg);
-  transform-origin: top left;
+  transform: skewY(10deg);
+  transform-origin: top right;
 }
 
-.neon5::after {
-  content: attr(hello-text);
+.neon6::after {
+  content: attr(open-text);
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
-  color: #0000BB;
+  color: #FF0000;
   filter: blur(15px);
 }
 
-.neon5::before {
+.neon6::before {
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: #75A9FF;
+  background: #FF0066;
   z-index: -2;
   opacity: .5;
   filter: blur(40px);
