--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -57,7 +57,7 @@
   </div>
 
   <div class="Final-task-btn">
-    <label for="my_modal4" class="neon4" Final-task-text="Final_task">Final_task</label><!-- チェックボックスラベル -->
+    <label for="my_modal4" class="neon4" Final-task-text="final_task">final_task</label><!-- チェックボックスラベル -->
     <input type="checkbox" id="my_modal4"><!-- 非表示チェックボックス -->
     <label class="my_modal_overlay" for="my_modal4"></label><!-- オーバーレイ -->
     <div class="my_modal_body4">
@@ -83,7 +83,8 @@
     <div class= "light"></div>
   </div>
 
-  <p class="neon5" hello-text="click!">Hello</p>
+  <p class="neon5" hello-text="Hello">Hello</p>
   
+  <p class="neon6" open-text="OPEN">OPEN</p>
 
 </div>
