--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -83,6 +83,14 @@
     <div class= "light"></div>
   </div>
 
+  <div class="container3">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container4">
+    <div class= "light"></div>
+  </div>
+
   <p class="neon5" hello-text="Hello">Hello</p>
   
   <p class="neon6" open-text="OPEN">OPEN</p>
