--- a/app/assets/stylesheets/portfolio.css
+++ b/app/assets/stylesheets/portfolio.css
@@ -17,20 +17,22 @@
   display: none;
 }
 /* モーダル */
-.my_modal_body2{    
-  display: none;
+.my_modal_body2 {
   position: fixed;
   z-index: 100000;
-  top: 50%;
+  top: 20%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
   -webkit-transform: translateY(-50%) translateX(-50%);
   display: none;
-  background-color: #FFF;
+  background:rgba(0,255,255,0.5);
+  backdrop-filter: blur(12px);
   overflow-y: auto;
   width: 90%;
   max-height: 80%;
   max-width: 600px;
+  border-radius: 20px;
+  color: white;
 }
 
 /* チェック時オーバーレイとコンテンツを表示 */
