--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -5,14 +5,24 @@
     <label class="my_modal_overlay" for="my_modal1"></label><!-- オーバーレイ -->
     <div class="my_modal_body1">
       <div class="my_modal_header">
-          タイトル
+          profile
       </div>
       <div class="my_modal_content">
         <!-- モーダル内コンテンツ -->
           <ul>
-              <li>コンテンツ1</li>
-              <li>コンテンツ2</li>
-              <li>コンテンツ3</li>
+              <li>初めまして牧野と申します。</li>
+              <li></li>
+              <li>私は高校を卒業後、バレエダンサーとして活動してきました。</li>
+              <li>バレエ団というプロの団体に所属し、2年間の見習いを経て20歳の時、正団員。プロのバレエダンサーになることができました。</li>
+              <li>しかし、私は自分の実力が足りないということをわかっていました。周りのダンサーを見てこの世界で生きていくのは難しい。と考えていました。</li>
+              <li>踊りを頑張るのは当然みんながやっている。才能も身体的条件も音感も自分より優れている人と同じ量、それ以上頑張っても届かない領域があるとわかっていました。</li>
+              <li>それでも、この世界で生きていくためにと踊り以外で勝負しよう。と自分は舞台上の立ち回りや演技で勝負しようと考えました。経験のない方には伝わりづらいかもしれませんが、街の場面などでは舞台上には大きな空間を作ってはいけません。人がまばらに散って街中を再現しなければお客様が違和感を感じてしまうからです。</li>
+              <li>そういった頑張りが認められ昇格しました。ディレクターには「自分の実力を客観視していて、周りをよく見ているのはお前の長所だ。」と言ってもらえました。気がつくとバレエ団に入ってから８年が立っていました。</li>
+              <li>この世界で生きていくのは難しい。その思いは変わっていませんでした。バレエを辞めることを決意し、学歴のない私ができる仕事を探しているとプログラマーを見つけました。</li>
+              <li>完全未経験でも歓迎するという求人でしたが、やるなら少しは学んでからにしようとテックキャンプに入学しました。</li>
+              <li>私は座って作業することに慣れることから始まったので、正直大変でした。でも少しずつプログラミングを楽しむことができるようになってきました。初めて扱う技術がうまくいったり、エラー解決ができた時は、今までに無い快感を感じるようになりました。</li>
+              <li>まだまだ、使用できる言語は少ないですが、これからどんどん学んでいきます。</li>
+
          </ul>
       </div>
     </div>
