--- a/app/assets/stylesheets/index2.css
+++ b/app/assets/stylesheets/index2.css
@@ -31,7 +31,7 @@
   display: none;
   background:rgba(0,255,0,0.5);
   backdrop-filter: blur(12px);
-  overflow: scroll;
+  overflow: auto;
   min-height: 100%;
   max-width: 600px;
   border-radius: 20px;
