--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -17,7 +17,7 @@
               <li>しかし、私は自分の実力が足りないということをわかっていました。周りのダンサーを見てこの世界で生きていくのは難しい。と考えていました。</li>
               <li>踊りを頑張るのは当然みんながやっている。才能も身体的条件も音感も自分より優れている人と同じ量、それ以上頑張っても届かない領域があるとわかっていました。</li>
               <li>それでも、この世界で生きていくためにと踊り以外で勝負しよう。と自分は舞台上の立ち回りや演技で勝負しようと考えました。経験のない方には伝わりづらいかもしれませんが、街の場面などでは舞台上には大きな空間を作ってはいけません。人がまばらに散って街中を再現しなければお客様が違和感を感じてしまうからです。</li>
-              <li>そういった頑張りが認められ昇格しました。ディレクターには「自分の実力を客観視していて、周りをよく見ているのはお前の長所だ。」と言ってもらえました。気がつくとバレエ団に入ってから８年が立っていました。</li>
+              <li>そういった頑張りが認められ昇格しました。ディレクターには「自分の実力を客観視していて、周りをよく見ているのはお前の長所だ。」と言ってもらえました。気がつくとバレエ団に入ってから８年が経っていました。</li>
               <li>この世界で生きていくのは難しい。その思いは変わっていませんでした。バレエを辞めることを決意し、学歴のない私ができる仕事を探しているとプログラマーを見つけました。</li>
               <li>完全未経験でも歓迎するという求人でしたが、やるなら少しは学んでからにしようとテックキャンプに入学しました。</li>
               <li>私は座って作業することに慣れることから始まったので、正直大変でした。でも少しずつプログラミングを楽しむことができるようになってきました。初めて扱う技術がうまくいったり、エラー解決ができた時は、今までに無い快感を感じるようになりました。</li>
@@ -34,14 +34,33 @@
     <label class="my_modal_overlay" for="my_modal2"></label><!-- オーバーレイ -->
     <div class="my_modal_body2">
       <div class="my_modal_header">
-          タイトル
+          portfolio
       </div>
-      <div class="my_modal_content2">
+      <div class="my_modal_content">
         <!-- モーダル内コンテンツ -->
           <ul>
-              <li>コンテ</li>
-              <li>コンテンツ2</li>
-              <li>コンテンツ3</li>
+              <li>BooksPassageというオリジナルアプリです。</li>
+              <li>このアプリは、本を好きな人が読んだ本をまとめて感想を共有し、次に読む本を探すというアプリです。</li>
+              <li>男女年齢問わず、本が好きな人。感想を共有したいけど身近に共有できる人がいない人、恥ずかしい人。いつも同じ作家の本ばかりで違う作家の本を探している人。そんな人たちに向けてこのアプリを作りました。</li>
+              <li></li>
+              <li>搭載されている機能は</li>
+              <li>・サインアップ、ログイン、ログアウト機能・感想投稿機能・コメント機能</li>
+              <li>・フォロー機能・いいね(しおり)機能・アプリ内検索機能・ジャンル別検索機能</li>
+              <li>・Amazon検索機能・ネタバレ防止機能・Basic認証</li>
+              <li>などがあります。また、S3の導入もしています。</li>
+              <li></li>
+              <li>投稿機能で本をまとめ、コメント機能で感想を共有、いいね機能で本を興味がある本をリストアップ、アプリ内検索でさらに本を探し、Amazon検索機能から本の購入。この流れの繰り返しを想定しています。</li>
+              <li></li>
+              <%= link_to 'http://books-passage.herokuapp.com/' do %>
+                <%= image_tag 'bsss.jpeg', size: '288x158', class: "bsss"  %>
+              <% end %>
+              <li>http://books-passage.herokuapp.com/<li>
+              <li>認証コード<li>
+              <li>****</li>
+              <li>****</li>
+              <li></li>
+              <li>GitUrl :https://github.com/maki0sato/books-passage</li>
+              <li>[言語]Ruby, css, JavaScript</li>
          </ul>
       </div>
     </div>
@@ -55,7 +74,7 @@
       <div class="my_modal_header">
           タイトル
       </div>
-      <div class="my_modal_content3">
+      <div class="my_modal_content">
         <!-- モーダル内コンテンツ -->
           <ul>
               <li>コンテ</li>
@@ -74,7 +93,7 @@
       <div class="my_modal_header">
           タイトル
       </div>
-      <div class="my_modal_content4">
+      <div class="my_modal_content">
         <!-- モーダル内コンテンツ -->
           <ul>
               <li>コンテ</li>
