--- a/app/assets/stylesheets/portfolio.css
+++ b/app/assets/stylesheets/portfolio.css
@@ -20,7 +20,7 @@
 .my_modal_body2 {
   position: fixed;
   z-index: 100000;
-  top: 20%;
+  top: 400px;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
   -webkit-transform: translateY(-50%) translateX(-50%);
@@ -78,4 +78,8 @@
   z-index: -2;
   opacity: .5;
   filter: blur(40px);
+}
+
+.bsss {
+  border-radius: 20px;
 }
