--- a/app/assets/stylesheets/Final-task.css
+++ b/app/assets/stylesheets/Final-task.css
@@ -18,7 +18,7 @@
 .my_modal_body4 {
   position: fixed;
   z-index: 100000;
-  top: 20%;
+  top: 400px;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
   -webkit-transform: translateY(-50%) translateX(-50%);
