--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -44,7 +44,8 @@
               <li>男女年齢問わず、本が好きな人。感想を共有したいけど身近に共有できる人がいない人、恥ずかしい人。いつも同じ作家の本ばかりで違う作家の本を探している人。そんな人たちに向けてこのアプリを作りました。</li>
               <li></li>
               <li>搭載されている機能は</li>
-              <li>・サインアップ、ログイン、ログアウト機能・感想投稿機能・コメント機能</li>
+              <li>・ユーザー管理機能・感想投稿、編集、削除機能・コメント投稿、削除機能</li>
+              <li>・投稿一覧、詳細表示機能・ユーザー詳細表示、編集機能</li>
               <li>・フォロー機能・いいね(しおり)機能・アプリ内検索機能・ジャンル別検索機能</li>
               <li>・Amazon検索機能・ネタバレ防止機能・Basic認証</li>
               <li>などがあります。また、S3の導入もしています。</li>
@@ -72,14 +73,14 @@
     <label class="my_modal_overlay" for="my_modal3"></label><!-- オーバーレイ -->
     <div class="my_modal_body3">
       <div class="my_modal_header">
-          タイトル
+          skill
       </div>
       <div class="my_modal_content">
         <!-- モーダル内コンテンツ -->
           <ul>
-              <li>コンテ</li>
-              <li>コンテ</li>
-              <li>コンテンツ3</li>
+              <li>HTML/CSS</li>
+              <li>JavaScript</li>
+              <li>MySQL</li>
          </ul>
       </div>
     </div>
@@ -91,14 +92,28 @@
     <label class="my_modal_overlay" for="my_modal4"></label><!-- オーバーレイ -->
     <div class="my_modal_body4">
       <div class="my_modal_header">
-          タイトル
+          最終課題
       </div>
       <div class="my_modal_content">
         <!-- モーダル内コンテンツ -->
           <ul>
-              <li>コンテ</li>
-              <li>コンテンツ2</li>
-              <li>コン</li>
+              <li>テックキャンプの最終課題で作成したフリーマーケットのアプリケーションです。</li>
+              <li></li>
+              <li>搭載されている機能は</li>
+              <li>・ユーザー管理機能・商品出品機能・商品一覧表示機能・商品詳細表示機能</li>
+              <li>・商品情報編集機能・商品削除機能・商品購入機能・Basic認証</li>
+              <li>などがあります。また、S3の導入もしています。</li>
+              <li></li>
+              <%= link_to 'https://furima-36733.herokuapp.com/' do %>
+                <%= image_tag 'frmss.jpeg', size: '288x158', class: "bsss"  %>
+              <% end %>
+              <li>https://furima-36733.herokuapp.com/</li>
+              <li>認証コード</li>
+              <li>****</li>
+              <li>****</li>
+              <li></li>
+              <li>GitUrl :https://github.com/maki0sato/furima-36733</li>
+              <li>[言語]Ruby, css, JavaScript</li>
          </ul>
       </div>
     </div>
