--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -78,7 +78,7 @@
       <div class="my_modal_content">
         <!-- モーダル内コンテンツ -->
           <ul>
-              <li>HTML/CSSです</li>
+              <li>HTML/CSS</li>
               <li>JavaScript</li>
               <li>MySQL</li>
          </ul>
