p-pageボタン作成

--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -81,6 +81,7 @@
               <li>HTML/CSS</li>
               <li>JavaScript</li>
               <li>MySQL</li>
+              <li>AWS</li>
          </ul>
       </div>
     </div>
@@ -114,6 +115,26 @@
               <li></li>
               <li>GitUrl :https://github.com/maki0sato/furima-36733</li>
               <li>[言語]Ruby, css, JavaScript</li>
+         </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="p-page-btn">
+    <label for="my_modal7" class="neon7" p-page-text="p-page">p-page</label><!-- チェックボックスラベル -->
+    <input type="checkbox" id="my_modal7"><!-- 非表示チェックボックス -->
+    <label class="my_modal_overlay" for="my_modal7"></label><!-- オーバーレイ -->
+    <div class="my_modal_body7">
+      <div class="my_modal_header">
+          p-page
+      </div>
+      <div class="my_modal_content">
+        <!-- モーダル内コンテンツ -->
+          <ul>
+              <li>HTML</li>
+              <li>JavaScript</li>
+              <li>MySQL</li>
+              <li>AWS</li>
          </ul>
       </div>
     </div>
