--- a/app/assets/stylesheets/p-page.css
+++ b/app/assets/stylesheets/p-page.css
@@ -85,3 +85,9 @@
 .bsss {
   border-radius: 20px;
 }
+
+.neon7:hover {
+  color: #fff;
+  background: #fff;
+  box-shadow: 0 0 10px #fff, 0 0 40px #fff, 0 0 80px #fff;
+}
