--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -139,6 +139,12 @@
       </div>
     </div>
   </div>
+
+  <p class="neon5" hello-text="Hello">Hello</p>
+  
+  <p class="neon6" open-text="OPEN">OPEN</p>
+   
+
   
   <div class="container1">
     <div class= "light"></div>
@@ -155,9 +161,112 @@
   <div class="container4">
     <div class= "light"></div>
   </div>
-
-  <p class="neon5" hello-text="Hello">Hello</p>
   
-  <p class="neon6" open-text="OPEN">OPEN</p>
+  <div class="container5">
+    <div class= "light"></div>
+  </div>
 
+  <div class="container6">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container7">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container8">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container9">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container10">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container11">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container12">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container13">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container14">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container15">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container16">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container17">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container18">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container19">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container20">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container21">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container22">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container23">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container24">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container25">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container26">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container27">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container28">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container29">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container30">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container31">
+    <div class= "light"></div>
+  </div>
 </div>
