--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -269,4 +269,12 @@
   <div class="container31">
     <div class= "light"></div>
   </div>
+
+  <div class="container32">
+    <div class= "light"></div>
+  </div>
+
+  <div class="container33">
+    <div class= "light"></div>
+  </div>
 </div>
