--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -52,6 +52,8 @@
               <li></li>
               <li>投稿機能で本をまとめ、コメント機能で感想を共有、いいね機能で本を興味がある本をリストアップ、アプリ内検索でさらに本を探し、Amazon検索機能から本の購入。この流れの繰り返しを想定しています。</li>
               <li></li>
+              <li>制作期間は9日程度(一日平均作業時間は約10時間)</li>
+              <li></li>
               <%= link_to 'http://books-passage.herokuapp.com/' do %>
                 <%= image_tag 'bsss.jpeg', size: '288x158', class: "bsss"  %>
               <% end %>
@@ -60,7 +62,7 @@
               <li>****</li>
               <li>****</li>
               <li></li>
-              <li>GitUrl :https://github.com/maki0sato/books-passage</li>
+              <li>GitHubUrl :https://github.com/maki0sato/books-passage</li>
               <li>[言語]Ruby, css, JavaScript</li>
          </ul>
       </div>
@@ -113,7 +115,7 @@
               <li>****</li>
               <li>****</li>
               <li></li>
-              <li>GitUrl :https://github.com/maki0sato/furima-36733</li>
+              <li>GitHubUrl :https://github.com/maki0sato/furima-36733</li>
               <li>[言語]Ruby, css, JavaScript</li>
          </ul>
       </div>
@@ -131,10 +133,26 @@
       <div class="my_modal_content">
         <!-- モーダル内コンテンツ -->
           <ul>
-              <li>HTML</li>
-              <li>JavaScript</li>
-              <li>MySQL</li>
-              <li>AWS</li>
+              <li>このプロフィールページの紹介です。</li>
+              <li></li>
+              <li>夜のネオン街をイメージして作りました。</li>
+              <li>昭和風のネオン街をイメージ制作を始めたのですが、作っていくうちに少しサイバーパンクっぽくなりました。気に入っています。</li>
+              <li>モーダルウィンドウや、CSSのanimation、AWSでのデプロイなど初めて使用しました。</li>
+              <li>楽しみながら作ることができました。</li>
+              <li></li>
+              <li>制作期間は4日程度(一日平均作業時間は約9時間)</li>
+              <li></li>
+              <%= link_to 'http://18.181.136.74:' do %>
+                <%= image_tag 'top-ss.png', size: '288x158', class: "bsss"  %>
+              <% end %>
+              <li>http://18.181.136.74:</li>
+              <%= link_to 'http://18.181.136.74/profile/index2' do %>
+                <%= image_tag 'ppagess.jpeg', size: '288x158', class: "bsss"  %>
+              <% end %>
+              <li>http://18.181.136.74/profile/index2</li>
+              <li></li>
+              <li>GitHubUrl :https://github.com/maki0sato/p-page</li>
+              <li>[言語]Ruby, css, JavaScript</li>
          </ul>
       </div>
     </div>
