リンク先を新しいタブで開くように設定

--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -54,7 +54,7 @@
               <li></li>
               <li>制作期間は9日程度(一日平均作業時間は約10時間)</li>
               <li></li>
-              <%= link_to 'http://books-passage.herokuapp.com/' do %>
+              <%= link_to 'http://books-passage.herokuapp.com/', target: :_blank, rel: "noopener noreferrer" do %>
                 <%= image_tag 'bsss.jpeg', size: '288x158', class: "bsss"  %>
               <% end %>
               <li>http://books-passage.herokuapp.com/<li>
@@ -107,7 +107,7 @@
               <li>・商品情報編集機能・商品削除機能・商品購入機能・Basic認証</li>
               <li>などがあります。また、S3の導入もしています。</li>
               <li></li>
-              <%= link_to 'https://furima-36733.herokuapp.com/' do %>
+              <%= link_to 'https://furima-36733.herokuapp.com/', target: :_blank, rel: "noopener noreferrer" do %>
                 <%= image_tag 'frmss.jpeg', size: '288x158', class: "bsss"  %>
               <% end %>
               <li>https://furima-36733.herokuapp.com/</li>
@@ -142,11 +142,11 @@
               <li></li>
               <li>制作期間は4日程度(一日平均作業時間は約9時間)</li>
               <li></li>
-              <%= link_to 'http://18.181.136.74:' do %>
+              <%= link_to 'http://18.181.136.74:', target: :_blank, rel: "noopener noreferrer" do %>
                 <%= image_tag 'top-ss.png', size: '288x158', class: "bsss"  %>
               <% end %>
               <li>http://18.181.136.74:</li>
-              <%= link_to 'http://18.181.136.74/profile/index2' do %>
+              <%= link_to 'http://18.181.136.74/profile/index2', target: :_blank, rel: "noopener noreferrer" do %>
                 <%= image_tag 'ppagess.jpeg', size: '288x158', class: "bsss"  %>
               <% end %>
               <li>http://18.181.136.74/profile/index2</li>
