--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -55,7 +55,7 @@
               <li>制作期間は9日程度(一日平均作業時間は約10時間)</li>
               <li></li>
               <%= link_to 'http://books-passage.herokuapp.com/', target: :_blank, rel: "noopener noreferrer" do %>
-                <%= image_tag 'bsss.jpeg', size: '288x158', class: "bsss"  %>
+                <%= image_tag 'bsss.jpeg', size: '288x158', class: "ss"  %>
               <% end %>
               <li>http://books-passage.herokuapp.com/<li>
               <li>認証コード<li>
@@ -108,7 +108,7 @@
               <li>などがあります。また、S3の導入もしています。</li>
               <li></li>
               <%= link_to 'https://furima-36733.herokuapp.com/', target: :_blank, rel: "noopener noreferrer" do %>
-                <%= image_tag 'frmss.jpeg', size: '288x158', class: "bsss"  %>
+                <%= image_tag 'frmss.jpeg', size: '288x158', class: "ss"  %>
               <% end %>
               <li>https://furima-36733.herokuapp.com/</li>
               <li>認証コード</li>
@@ -143,11 +143,11 @@
               <li>制作期間は4日程度(一日平均作業時間は約9時間)</li>
               <li></li>
               <%= link_to 'http://18.181.136.74:', target: :_blank, rel: "noopener noreferrer" do %>
-                <%= image_tag 'top-ss.png', size: '288x158', class: "bsss"  %>
+                <%= image_tag 'top-ss.png', size: '288x158', class: "ss"  %>
               <% end %>
               <li>http://18.181.136.74:</li>
               <%= link_to 'http://18.181.136.74/profile/index2', target: :_blank, rel: "noopener noreferrer" do %>
-                <%= image_tag 'ppagess.jpeg', size: '288x158', class: "bsss"  %>
+                <%= image_tag 'ppagess.jpeg', size: '288x158', class: "ss"  %>
               <% end %>
               <li>http://18.181.136.74/profile/index2</li>
               <li></li>
