portfolio説明文修正

--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -50,7 +50,7 @@
               <li>・Amazon検索機能・ネタバレ防止機能・Basic認証</li>
               <li>などがあります。また、S3の導入もしています。</li>
               <li></li>
-              <li>投稿機能で本をまとめ、コメント機能で感想を共有、いいね機能で本を興味がある本をリストアップ、アプリ内検索でさらに本を探し、Amazon検索機能から本の購入。この流れの繰り返しを想定しています。</li>
+              <li>投稿機能で本をまとめ、コメント機能で感想を共有、いいね機能で興味がある本をリストアップ、アプリ内検索でさらに本を探し、Amazon検索機能から本の購入。この流れの繰り返しを想定しています。</li>
               <li></li>
               <li>制作期間は9日程度(一日平均作業時間は約10時間)</li>
               <li></li>
