--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -59,8 +59,8 @@
               <% end %>
               <li>http://books-passage.herokuapp.com/</li>
               <li>認証コード</li>
-              <li>****</li>
-              <li>****</li>
+              <li>ichiro</li>
+              <li>5151</li>
               <li></li>
               <li>GitHubUrl :https://github.com/maki0sato/books-passage</li>
               <li>[言語]Ruby, css, JavaScript</li>
@@ -114,8 +114,8 @@
               <% end %>
               <li>https://furima-36733.herokuapp.com/</li>
               <li>認証コード</li>
-              <li>****</li>
-              <li>****</li>
+              <li>admin</li>
+              <li>2222</li>
               <li></li>
               <li>GitHubUrl :https://github.com/maki0sato/furima-36733</li>
               <li>[言語]Ruby, css, JavaScript</li>
